2018-06-05  Araki Ken  <arakiken@users.sf.net>

	* ui_screen_manager.c:
	  ui_connect_dialog() can modify the value of main_config.private_key.

	* vt_pty_ssh.c: ssh_connect() passes NULL to libssh2_userauth_publickey_fromfile()
	  as 'publickey' argument.

	* winrs.rs: "PrivKey" entry is added.

	* win32/ui_connect_dialog.c:
	  - get_window_text() returns UTF-8 or MB text.
	  - set_window_text() which converts UTF-8 string to WCHAR* and calls
	    SetWindowTextW() is added.

	* ui_connect_dialog.h, */ui_connect_dialog.c:
	  - 'char **privkey' is added to arguments of ui_connect_dialog().
	  - IDD_SSH_PRIVKEY is added.

2018-06-02  Araki Ken  <arakiken@users.sf.net>

	* ui_draw_str.c: bg_xcolor is added to arguments of draw_picture(), and
	  if bg_xcolor is not NULL, ui_window_fill_with() is used instead of
	  ui_window_clear().

	* ui_screen.c: xterm_get_picture_data() uses vt_term_get_bce_ch() instead
	  of vt_sp_ch().

	* vt_parser.c: put_char() uses vt_term_get_bce_ch() instead of vt_sp_ch()
	  in dealing with DRCS-SIXEL.

	* vt_edit.h, vt_screen.h, vt_term.h:
	  vt_{edit|screen|term}_get_bce_ch() is added.

	* ui_screen.c, vt_parser.h: CS_BOX is added to vt_cursor_style_t, and is
	  used to draw an unfocused cursor or a cursor on a picture.

2018-06-01  Araki Ken  <arakiken@users.sf.net>

	* servman/main.c, servman.rc:
	  - IDM_XXX and IDD_XXX are changed from 1-28 to 101-128.
	  - Message dialog to confirm whether to save to a configration file is shown
	    if window is closed.
	  - Message dialog to confirm whether to really delete an entry is shown.
	  - Whether the edited name of a directory or an entry is valid or not is checked.

	* drcssixel/test.c: 2 sixel graphics are output.

2018-05-29  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, en/README.win32, ja/README.win32,
	  etc/main, etc/main.ja: Updated.

	* configure.in: tool/servman is added to OUTPUT_FILES and MAKE_DIRS
	  if $gui is "win32".
