@@ -4,6 +4,7 @@
 * Add vte 0.52.0 API symbols to libvte compatible library.
 * Add --rv / "rv_color" option.
 * Add servman.exe which manages the list of servers on win32.
+* Add "PrivKey" entry to the ssh connection dialog on win32.
 * Drop --servlist / "server_list" option.
 * Improve performance of redrawing screen when type_engine=cairo.
 * Show box style cursor when the cursor is on a picture or an emoji.
