@@ -1,3 +1,7 @@
+2018-06-07  Araki Ken  <arakiken@users.sf.net>
+
+	* win32/ui_connect_dialog.c: DnD to "PrivKey" entry is supported.
+
 2018-06-05  Araki Ken  <arakiken@users.sf.net>
 
 	* ui_screen_manager.c:
